<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informe_peso"
        android:id="@+id/pesoTextView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pesoEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informe_altura"
        android:id="@+id/alturaTextView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/alturaEditText" />
    <RadioGroup
        android:id="@+id/NivelEsporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton android:id="@+id/NivelEsporte1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nivelEsporte1"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton android:id="@+id/NivelEsporte2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nivelEsporte2"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton android:id="@+id/NivelEsporte3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nivelEsporte3"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informe_data_nasc"
        android:id="@+id/dataNascimentoTextView" />

    <EditText
        android:id="@+id/dataNascimentoEditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informe_sexo"
        android:id="@+id/sexoTextView" />

    <EditText
        android:id="@+id/sexoEditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcularVCT"
        android:id="@+id/calcularVCTButton" />
</LinearLayout>
