<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/pesoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informe_peso" />

    <EditText
        android:id="@+id/pesoEditTextPA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/alturaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informe_altura" />

    <EditText
        android:id="@+id/alturaEditTextPA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/dataNascimentoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informe_data_nasc" />

    <EditText
        android:id="@+id/dataNascimentoEditTextPA"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background" />

    <TextView
        android:id="@+id/sexoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informe_sexo" />

    <EditText
        android:id="@+id/sexoEditTextPA"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/calcularPAButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcularPA" />

</LinearLayout>